@@ -69,6 +69,7 @@ import ch.interlis.iox_j.jts.Iox2jtsException;
 import ch.interlis.iox_j.wkb.Iox2wkb;
 import ch.interlis.iox_j.wkb.Iox2wkbException;
 import ch.interlis.iox_j.wkb.Wkb2iox;
+import net.iharder.Base64;
 
 public class PostgisColumnConverter extends AbstractWKBColumnConverter {
 	private boolean strokeArcs=true;
@@ -172,7 +173,7 @@ public class PostgisColumnConverter extends AbstractWKBColumnConverter {
 
 	    byte[] bytearray;
 		try {
-			bytearray = new sun.misc.BASE64Decoder().decodeBuffer(blob);
+			bytearray = Base64.decode(blob);
 		} catch (IOException e) {
 			throw new ConverterException(e);
 		}
@@ -491,7 +492,7 @@ public class PostgisColumnConverter extends AbstractWKBColumnConverter {
 	@Override
 	public String toIomBlob(Object obj) throws java.sql.SQLException,
 			ConverterException {
-	    String s = new sun.misc.BASE64Encoder().encode((byte[])obj);
+	    String s = Base64.encodeBytes((byte[])obj);
 	    return s;
 	}
 	@Override
